# ChangeLog for games-fps/chocolate-doom
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
  -chocolate-doom-1.0.0.ebuild, +chocolate-doom-1.1.1.ebuild,
  chocolate-doom-9999.ebuild:
  Version bump (and update accordingly SVN live ebuild)

  07 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  chocolate-doom-1.0.0.ebuild, chocolate-doom-9999.ebuild:
  Fix quotation

  26 Jan 2008; Jakub Moc <jakub@gentoo.org> chocolate-doom-1.0.0.ebuild,
  chocolate-doom-9999.ebuild:
  Fix autotools handling

  10 Dec 2007; Davide Cendron (scen) <scen@gentoo.org>
  +chocolate-doom-1.0.0.ebuild:
  New stable version from upstream. Time to frag some imp! 8)

  18 Jun 2007; Davide Cendron (scen) <scen@gentoo.org>
  chocolate-doom-9999.ebuild:
  Updated ESVN_REPO_URI (like explained in Sourceforge instructions)

  13 Jun 2007; Davide Cendron (scen) <scen@gentoo.org>
  +chocolate-doom-9999.ebuild, +metadata.xml:
  New Ebuild for bug 147329
